Adiçao de Arquivos

--- a/views/ideias.html
+++ b/views/ideias.html
@@ -34,7 +34,7 @@
         </main>
 
         <footer> 
-            Com ❤ <a href="http://rocketseat.com.br" target="_blank">RocketSeat 
+            Com ❤ <a href="http://rocketseat.com.br" target="_blank">Dalania
         </a> 
     </footer>
     {% endblock %}
